--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -558,7 +558,7 @@
           <div class="d-flex align-items-center fs-sm text-dark pb-1 mb-2"
             *ngIf="invoiceSummary.discountTotal && invoiceSummary.discountTotal>0">
             <span class="ms-2">Remise</span>
-            <span class="ms-auto">{{invoiceSummary.discountTotal| currency:'EUR' }}</span>
+            <span class="ms-auto">- {{invoiceSummary.discountTotal| currency:'EUR' }}</span>
           </div>
           <div class="d-flex align-items-center fs-sm text-dark pb-1 mb-2">
             <span class="ms-2">
