--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -45,7 +45,7 @@
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
             <span class="text-blue opacity-70 me-2 practical-sheets-pre-border "></span>
-            <span class="fs-xs fw-semibold text-blue text-uppercase">Apostilles et légalisation</span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Apostille et légalisation</span>
           </div>
           <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons class="text-grey" orderActionLabel=" Demander une apostille ou légalisation"
