--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -79,7 +79,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.7;
-  color: #666666;
+  color: var(--ar-primary);
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
