--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -127,6 +127,10 @@
           <section class="pt-0" *ngIf="post">
             <div class="row">
               <!-- Main Content START -->
+              <div>
+                <img *ngIf="post.media" class="rounded-2 mb-2 resize-featured-img"
+                  [src]="post.media.urlFull ? post.media.urlFull : ''">
+              </div>
               <div class="mb-5">
                 <span class="fs-6" [innerHTML]="post.contentText| trustHtml"></span>
 
