--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -173,13 +173,13 @@
           required>
         <label class="form-check-label" for="save-info2">En cochant la case, je reconnais avoir pris connaissance et
           accepter les Conditions Générales d’Utilisation du site accessibles et téléchargeables <a class="cgu-link"
-            href="/privacy-policy" target="_blank" rel="noopener noreferrer" (click)="modal.dismiss()">ici</a>.
+            href="/terms" target="_blank" rel="noopener noreferrer">ici</a>.
         </label>
       </div>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="cancelAcceptation();modal.dismiss()">Annuler</button>
-      <button type="button" class="btn btn-danger ms-2"
+      <button type="button" class="btn btn-danger ms-2" [disabled]="!acceptTerms"
         (click)="acceptTermsForCurrentUser();modal.dismiss()">Confirmer</button>
     </div>
   </ng-template>
