--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -16,7 +16,7 @@
         </div>
         <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
           [orderActionRoute]="'/quotation/new/'+serviceFamilyGroupAnnouncement!.id+'/'+quotationTypeOrder.id"
-          quotationActionLabel="Demander un devis"
+          quotationActionLabel="Déposer une formalité"
           [quotationActionRoute]="'/quotation/new/'+serviceFamilyGroupFormality!.id+'/'+quotationTypeOrder.id"
           [isLightButtons]="true">
         </double-buttons>
