--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -290,7 +290,7 @@
                     </div>
                   </div>
                   <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                      <span>Publié le {{post.text.date | date:'EEEE d MMMM'}}</span>
+                      <span>Publié le {{post.text.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
