--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -67,7 +67,7 @@
                           </div>
                         </div>
                         <span class="col-auto small text fs-9 border-end">
-                          Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                          Publié le {{post.date |literalDatePipe}}</span>
                         <span class="col-auto small text fs-9">Durée {{post.mediaTimeLength | duration}}</span>
                       </div>
                       <div class="card-body">
