--- a/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
+++ b/client-jss/src/app/main/components/post-category-header/post-category-header.component.html
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <category-hub [selectedEntityType]="selectedJssCategory"
+  <category-hub [selectedEntityType]="selectedJssCategory" *ngIf="selectedJssCategory"
     (jssCategoryChange)="updateSelectedCategory($event)"></category-hub>
 </div>
