--- a/client-jss/src/app/main/components/post-department-header/post-department-header.component.html
+++ b/client-jss/src/app/main/components/post-department-header/post-department-header.component.html
@@ -16,6 +16,6 @@
     </div>
   </div>
 
-  <department-hub [selectedEntityType]="selectedDepartment"
+  <department-hub [selectedEntityType]="selectedDepartment" *ngIf="selectedDepartment"
     (departmentChange)="updateSelectedDepartment($event)"></department-hub>
 </div>
