--- a/client-jss/src/app/main/components/post-tag-header/post-tag-header.component.html
+++ b/client-jss/src/app/main/components/post-tag-header/post-tag-header.component.html
@@ -20,5 +20,5 @@
     </div>
   </div>
 
-  <tag-hub [selectedEntityType]="selectedTag"></tag-hub>
+  <tag-hub [selectedEntityType]="selectedTag" *ngIf="selectedTag"></tag-hub>
 </div>
