--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -116,7 +116,7 @@
                       </h4>
                       <div class="row align-items-end">
                         <div class="col"> <span class="date-info fs-9 float-lg-end">
-                            <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                            <span>Publié le {{post.date | literalDatePipe}}</span>
                           </span>
                         </div>
                       </div>
@@ -197,7 +197,7 @@
                   </h6>
                   <div class="post-meta">
                     <span class="date-info small">
-                      <span class="fs-9">Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                      <span class="fs-9">Publié le {{post.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
@@ -245,8 +245,7 @@
                     <a class="btn-light btn-sm rounded-circle btn-circle fs-7"
                       (click)="togglePlayPodcast(podcasts[0])"><i
                         [ngClass]="isPlayingPodcast(podcasts[0]) ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
-                    <span class="small text-light fs-9 ms-2">Publié le {{podcasts[0].date | date: 'dd/MM/yyyy'}} à
-                      {{podcasts[0].date | date: 'HH:mm'}}</span>
+                    <span class="small text-light fs-9 ms-2">Publié le {{podcasts[0].date | literalDatePipe}}</span>
                   </div>
 
                 </div>
@@ -378,7 +377,7 @@
                   </h6>
                   <div class="post-meta">
                     <span class="date-info small">
-                      <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                      <span>Publié le {{post.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
@@ -430,7 +429,7 @@
                   </h6>
                   <div class="post-meta">
                     <span class="date-info small">
-                      <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                      <span>Publié le {{post.date |literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
@@ -484,7 +483,7 @@
                   </h6>
                   <div class="post-meta">
                     <span class="date-info small">
-                      <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                      <span>Publié le {{post.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
@@ -670,7 +669,7 @@
               <div class="col-lg-6">
               </div>
               <div class="col-lg-6"> <span class="date-info fs-9 float-lg-end">
-                  <span>Publié le {{post.date | date:'EEEE d MMMM'}}</span>
+                  <span>Publié le {{post.date | literalDatePipe}}</span>
                 </span>
               </div>
             </div>
