fix charte graphique bugs

--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -113,7 +113,7 @@
                 <a class="nav-link podcast-nav-link mt-auto py-0 ps-2"
                   [ngClass]="{'active': getCurrentRoute().includes('/podcasts') && getCurrentRoute().includes('/podcasts')}"
                   routerLink="/podcasts">
-                  Podcast <span><i class="fas fa-bolt"></i></span>
+                  Podcast
                 </a>
               </span>
             </li>
