--- a/client-jss/src/app/main/components/post/post.component.css
+++ b/client-jss/src/app/main/components/post/post.component.css
@@ -2,8 +2,8 @@
   border-color: var(--bs-gray-300);
 }
 
-.border-left-red {
-  border-left: solid 3px #FF5757;
+.border-left-blue {
+  border-left: solid 3px #1c2d41;
 }
 
 .post-player-bg {
