--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -62,6 +62,7 @@ Primary use:  blog, news, magazine
   --ar-secondary-bg: #1C2D41;
   --ar-tertiary-bg: #F8EB83;
   --ar-blue-dark: #2C4057;
+  --ar-blue-medium: #667892;
   --ar-blue-light: #EDF1F5;
   --ar-red: #FF5757;
 }
@@ -244,10 +245,6 @@ a {
   color: var(--ar-primary);
   text-decoration: underline;
   cursor: pointer;
-}
-
-a:hover {
-  color: var(--ar-primary);
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -11681,6 +11678,14 @@ a:hover, a:focus, a:active {
   text-decoration: none;
 }
 
+a strong {
+  color: var(--ar-blue-medium);
+}
+
+a strong:hover {
+  color: var(--ar-primary);
+}
+
 iframe {
   border: 0;
   outline: none;
@@ -12770,11 +12775,11 @@ blockquote p {
 }
 
 .blog-style5 .post-title a {
-  color: #414141;
+  color: var(--ar-primary);
 }
 
 .blog-style5 .post-title a:hover {
-  color: #ff3e30;
+  color: black;
 }
 
 @media (max-width: 575px) {
