--- a/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
@@ -56,7 +56,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">1898</h1>
+                  <h2 class="mb-xl-4 h1">1898</h2>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du supplément de l’annuaire général des sociétés françaises par
                     actions</p>
@@ -68,7 +68,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">1900</h1>
+                  <h2 class="mb-xl-4 h1">1900</h2>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
                   <p class="fs-2 mb-4 mb-xl-5">Première habilitation dans le département de la Seine</p>
                 </div>
@@ -85,7 +85,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">1985</h1>
+                  <h2 class="mb-xl-4 h1">1985</h2>
                   <small class="mb-xl-4">FORMALITÉS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du service de formalité légales</p>
                 </div>
@@ -96,7 +96,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2002</h1>
+                  <h2 class="mb-xl-4 h1">2002</h2>
                   <small class="mb-xl-4">SITE WEB</small>
                   <p class="fs-2 mb-4 mb-xl-5">Lancement du site internet jss.fr</p>
                 </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2003</h1>
+                  <h2 class="mb-xl-4 h1">2003</h2>
                   <small class="mb-xl-4">FORMATIONS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du service des formations juridiques</p>
                 </div>
@@ -124,7 +124,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2004</h1>
+                  <h2 class="mb-xl-4 h1">2004</h2>
                   <small class="mb-xl-4"></small>
                   <p class="fs-2 mb-4 mb-xl-5">Création de la revue juridique, “le Journal des Sociétés”, mensuel du
                     juriste et de l’entreprise</p>
@@ -142,7 +142,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2014</h1>
+                  <h2 class="mb-xl-4 h1">2014</h2>
                   <small class="mb-xl-4">TRAITEMENT DES FORMALITÉS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du service de formalités dématérialisée</p>
                 </div>
@@ -153,7 +153,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2015</h1>
+                  <h2 class="mb-xl-4 h1">2015</h2>
                   <small class="mb-xl-4">CROISSANCE EXTERNE</small>
                   <p class="fs-2 mb-4 mb-xl-5">Rachat du Journal “les Annonces de la Seine"</p>
                 </div>
@@ -170,7 +170,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2016</h1>
+                  <h2 class="mb-xl-4 h1">2016</h2>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
                   <p class="fs-2 mb-4 mb-xl-5">Nouvelles habilitations dans les départements 78, 91 et 95</p>
                 </div>
@@ -181,7 +181,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2019</h1>
+                  <h2 class="mb-xl-4 h1">2019</h2>
                   <small class="mb-xl-4">DOMICILIATION</small>
                   <p class="fs-2 mb-4 mb-xl-5">Création du Service Domiciliation</p>
                 </div>
@@ -198,7 +198,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2020</h1>
+                  <h2 class="mb-xl-4 h1">2020</h2>
                   <small class="mb-xl-4">ANNONCES LÉGALES</small>
                   <p class="fs-2 mb-4 mb-xl-5">Ouverture du Service de Presse de En Ligne (SPEL)</p>
                 </div>
@@ -209,7 +209,7 @@
             <div class="row flex-grow-1 ms-sm-2 justify-content-center g-2 g-lg-0 ">
               <div class="col-lg-4 order-md-2 pe-lg-3 pe-0">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2022</h1>
+                  <h2 class="mb-xl-4 h1">2022</h2>
                   <small class="mb-xl-4">JOURNAL SPÉCIAL DES SOCIÉTÉS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Le journal devient hebdomadaire</p>
                 </div>
@@ -226,7 +226,7 @@
               </div>
               <div class="col-lg-4 order-md-2 ps-lg-3">
                 <div class="d-flex flex-column card border-0 rounded-3 h-100 p-4 px-lg-5">
-                  <h1 class="mb-xl-4">2023</h1>
+                  <h2 class="mb-xl-4 h1">2023</h2>
                   <small class="mb-xl-4">JOURNAL SPÉCIAL DES SOCIÉTÉS</small>
                   <p class="fs-2 mb-4 mb-xl-5">Digitalisation du journal</p>
                 </div>
