--- a/client-myjss/src/app/modules/miscellaneous/components/our-clients/our-clients.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/our-clients/our-clients.component.html
@@ -1,8 +1,8 @@
 <div>
   <div class="text-center">
-    <h1>
+    <h2 class="h1">
       Nos clients
-    </h1>
+    </h2>
     <p>Plus de 2 000 professionnels simplifient leurs démarches juridiques en ligne grâce à MYJSS.</p>
   </div>
 
