--- a/client-jss/src/app/main/components/post/post.component.css
+++ b/client-jss/src/app/main/components/post/post.component.css
@@ -23,3 +23,8 @@
   object-fit: cover;
   display: block;
 }
+
+.serie-border {
+  border-left: solid 4px var(--ar-primary);
+  background-color: var(--bs-gray-100);
+}
