--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -134,6 +134,28 @@
                 <figcaption class="figure-caption" *ngIf=" post.media.captionText">{{post.media.captionText}}
                 </figcaption>
               </div>
+
+              <!-- IF serie : Serie bloc -->
+              <div class="my-2" *ngIf="seriePost">
+                <div class="serie-border p-3">
+                  <div class="row">
+                    <h3>Notre série "{{seriePost.name}}"</h3>
+                  </div>
+                  <div class="row pb-2">
+                    <strong>{{seriePost.excerptText}}</strong>
+                  </div>
+                  <div class="row" *ngFor="let seriePost of postsOfSerie">
+                    <li *ngIf="seriePost.id!=post.id">
+                      <a style="color: var(--ar-blue-medium);"
+                        [routerLink]=' "/post/" + seriePost.slug'>{{seriePost.titleText}}</a>
+                    </li>
+                    <li *ngIf="seriePost.id==post.id">
+                      {{seriePost.titleText}}
+                    </li>
+                  </div>
+                </div>
+              </div>
+
               <div class="mb-5">
                 <span class="fs-6" [innerHTML]="post.contentText| trustHtml"></span>
 
