bluesky icon devs in progress

--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -112,6 +112,14 @@ Footer START -->
               <a class="nav-link px-2 fs-5" href="https://www.instagram.com/journalspecialdessocietes/"
                 target="_blank"><i class="fab fa-instagram-square"></i></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link px-2 fs-5" href="https://bsky.app/intent/compose?text=" target="_blank"
+                aria-label="Bluesky">
+                <img src="assets/images/icon/square-bluesky.svg" alt="Bluesky"
+                  style="height: 1em; width: 1em; vertical-align: middle;">
+              </a>
+
+            </li>
           </ul>
           <h5 class="mb-4"><a class="nav-link pt-0" style="cursor: pointer;" routerLink="/contact">Contact</a>
           </h5>
