--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -119,6 +119,11 @@
               href="https://www.facebook.com/Journal.Special.des.Societes" target="_blank" aria-label="Instagram">
               <i class="ai-instagram"></i>
             </a>
+            <a class="btn btn-icon btn-sm btn-secondary btn-bluesky rounded-circle mx-2 ms-sm-0 me-sm-3"
+              href="https://bsky.app/profile/jss-media.bsky.social" target="_blank" aria-label="Bluesky">
+              <img src="assets/img/icons/bluesky.png" alt="Bluesky"
+                style=" object-fit: contain; vertical-align: middle; margin:auto ">
+            </a>
           </div>
         </div>
         <div class="col-2 d-none d-sm-block">
