--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -57,6 +57,11 @@
             <a class="nav-link p-2 me-2" (click)="shareOnFacebook()" title="Facebook" aria-label="Facebook">
               <i class="ai-facebook"></i>
             </a>
+            <a class="nav-link p-2 me-2 btn-icon-bluesky mx-2 ms-sm-0 " (click)="shareOnBluesky()" title="Bluesky"
+              aria-label="Bluesky">
+              <img src="assets/img/icons/bluesky.png" alt="Bluesky">
+            </a>
+
             <a class="nav-link p-2" (click)="shareByMail()" title="mail" aria-label="mail">
               <i class="ai-mail"></i>
             </a>
